fix bag z-index

--- a/components/css/top_menu.css
+++ b/components/css/top_menu.css
@@ -120,7 +120,7 @@ ul.ul_sup, .ul_more{
     position: absolute;
     border-top: solid 1px darkgoldenrod;
     border-bottom: solid 1px darkgoldenrod;
-    z-index: 2;
+    z-index: 3;
     height: 115px;
     /* IE10+ */
     background-image: -ms-linear-gradient(top, #B8860B 0%, #FFAF1A 4%, #ffaf1a 96%, #B8860B 100%);
